@@ -3,9 +3,12 @@ package hobbiedo.survey.application;
 import static hobbiedo.global.api.code.status.ErrorStatus.*;
 
 import java.util.ArrayList;
+import java.util.Collections;
 import java.util.List;
+import java.util.Map;
 import java.util.Optional;
 import java.util.Random;
+import java.util.stream.Collectors;
 
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
@@ -35,30 +38,42 @@ public class SurveyServiceImpl implements SurveyService {
 
 	@Override
 	public List<HobbySurveyResponseDto> getHobbySurveyQuestions() {
+		
+		// 데이터베이스에서 모든 취미 설문 문항을 가져옴
+		List<HobbySurvey> allQuestions = hobbySurveyRepository.findAll();
 
-		// 데이터베이스에서 랜덤으로 20개의 취미 설문 문항을 가져옴
-		List<HobbySurvey> randomQuestions = new ArrayList<>();
+		// QuestionType 별로 문항을 그룹화
+		Map<QuestionType, List<HobbySurvey>> questionsByType = allQuestions.stream()
+			.collect(Collectors.groupingBy(HobbySurvey::getQuestionType));
+
+		List<HobbySurvey> selectedQuestions = new ArrayList<>();
 
 		for (QuestionType questionType : QuestionType.values()) {
-			List<HobbySurvey> questionsByType = Optional.ofNullable(
-					hobbySurveyRepository.findRandomQuestionsByType(questionType.name()))
-				.filter(list -> !list.isEmpty())
-				.orElseThrow(() -> new SurveyExceptionHandler(GET_HOBBY_SURVEY_QUESTIONS_EMPTY));
+			List<HobbySurvey> questions = questionsByType.get(questionType);
 
-			randomQuestions.addAll(questionsByType);
+			// 해당 QuestionType의 문항이 없으면 예외 처리
+			if (questions == null || questions.isEmpty()) {
+				throw new SurveyExceptionHandler(GET_HOBBY_SURVEY_QUESTIONS_EMPTY);
+			}
+
+			// 문항을 셔플
+			Collections.shuffle(questions);
+
+			// 상위 5개 문항 선택
+			selectedQuestions.addAll(questions.subList(0, Math.min(5, questions.size())));
 		}
 
-		log.info("Get Hobby Survey Questions Size (취미 설문 조사 질문 수) : {}", randomQuestions.size());
+		log.info("Get Hobby Survey Questions Size (취미 설문 조사 질문 수) : {}", selectedQuestions.size());
 
 		// 취미 설문 문항이 20개 미만일 경우 예외 처리
-		if (randomQuestions.size() < 20) {
+		if (selectedQuestions.size() < 20) {
 			throw new SurveyExceptionHandler(GET_HOBBY_SURVEY_QUESTIONS_LESS);
 		}
 
 		// 취미 설문 문항을 DTO로 변환하여 반환
-		List<HobbySurveyResponseDto> getHobbySurveyDtoList = randomQuestions.stream()
+		List<HobbySurveyResponseDto> getHobbySurveyDtoList = selectedQuestions.stream()
 			.map(HobbySurveyResponseDto::hobbySurveyToDto)
-			.toList();
+			.collect(Collectors.toList());
 
 		return getHobbySurveyDtoList;
 	}
